# easy.qmldir.qbs

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  project.qbs  pyproject.toml
.github/workflows/: docs.yaml
development/: index.html
docs/: development.md  index.md
docs/getting-started/: installation.md  usage.md
docs/reference/: easy-qmldir-item.md  index.md
docs/stylesheets/: extra.css
example/: example.qbs
example/qml/easy/qmldir/example/: Global.qml  Main.qml
example/src/: main.cpp
getting-started/installation/: index.html
getting-started/usage/: index.html
imports/: EasyQmldir.qbs
modules/easy/qmldir/: qmldir.qbs
reference/: index.html
reference/easy-qmldir-item/: index.html
search/: search_index.json
